--- a/index.html
+++ b/index.html
@@ -58,5 +58,5 @@
         }
     }
 </script> -->
-<script type="module" src= "script.js"></script>
+<script type="module" src= "/script.js"></script>
 </html>
