--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThreeJS Starter</title>
+    <title>ROSS WALTER - PORTFOLIO</title>
     <style>
         body { margin: 0; }
     </style>
 </head>
 <body>
+    
+    
     <canvas class="webgl"></canvas>
     <div class="title" id ="porfolioButton">
         PORTFOLIO
@@ -18,6 +20,12 @@
     </div>
     <div class="title" id ="blenderButton" style="top: 19vh">
         BLENDER
+    </div>
+    <div class="progressContainer" id="progressContainer">
+        <div class="progress" id="progressBar">
+            <div class="progress__fill" id="progress_fill">
+            </div>
+        </div>
     </div>
     <!-- <section>
     </section> -->
