--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="nav" id ="blenderButton"></div>
         <!-- <div class="nav">
         </div> -->
-        <!-- <div class="navTitle">
+        <div class="navTitle">
             about
-        </div> -->
+        </div>
         <!-- <div class="nav"></div> -->
     </div>
     
@@ -55,7 +55,19 @@
         autoplay
         width="500"
         height="1000"
-        src="videos\ScreenUi-tall_1.mp4"
+        src="/videos/about.mp4"
+        style="display: none" 
+    ></video>
+    <video 
+        id = "video3"
+        playsinline
+        webkit-playsinline
+        loop
+        muted
+        autoplay
+        width="500"
+        height="1000"
+        src="/videos/ScreenUi-tall_1.mp4"
         style="display: none" 
     ></video>
 </body>
