--- a/index.html
+++ b/index.html
@@ -16,17 +16,31 @@
     </div>
     <div id="blocker"></div>
     
-    <div class="navigation">
+    <!-- <div class="navigation">
         <div class="nav" id ="porfolioButton"></div>
         <div class="nav" id ="unityButton"></div>
         <div class="nav" id ="blenderButton"></div>
-        <!-- <div class="nav">
-        </div> -->
         <div class="navTitle">
             about
         </div>
-        <!-- <div class="nav"></div> -->
+    </div> -->
+
+    <div class="titles" id = "">
+        <div class="title" id = "title">
+            ROSS WALTER - PORTFOLIO
+        </div>
+        <div class="title" id = "animation">
+            ANIMATION
+        </div>
+        <div class="title" id = "interactives">
+            INTERACTIVES
+        </div>
+        <div class="title" id = "about">
+            ABOUT
+        </div>
     </div>
+
+
     
     <div class="progressContainer" id="progressContainer">
         <div class="progress" id="progressBar">
