--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
     <div class="titles" id = "">
         <div class="title" id = "title">
-            ROSS WALTER - PORTFOLIO
+            Ross W.
         </div>
         <div class="title" id = "animation">
-            ANIMATION
+            Animation
         </div>
         <div class="title" id = "interactives">
-            INTERACTIVES
+            Interactives
         </div>
         <div class="title" id = "about">
-            ABOUT
+            About
         </div>
     </div>
 
