--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div id = "css" style="pointer-events: none;">
     </div>
     <div id="blocker"></div>
+    <div class = "introText" id = "introText">
+        click and drag to look around
+    </div>
     
     <!-- <div class="navigation">
         <div class="nav" id ="porfolioButton"></div>
