--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         </div>
     </div>
 
+    <div class="blackAndWhite" id = "blackAndWhite">
+        *****
+    </div>
+
 
     
     <div class="progressContainer" id="progressContainer">
