--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
     <div class="blackAndWhite" id = "blackAndWhite">
         *****
     </div>
-
-
     
     <div class="progressContainer" id="progressContainer">
         <div class="progress" id="progressBar">
             <div class="progress__fill" id="progress_fill">
+            </div>
+            <div class = "title">
+                Best Viewed on a Computer
             </div>
         </div>
     </div>
