--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         muted
         width="500"
         height="1000"
-        src="videos\ScreenUi-square.mp4"
+        src="videos\ScreenUi-square-2.mp4"
         style="display: none" 
     ></video>
     <video 
@@ -81,7 +81,7 @@
         autoplay
         width="500"
         height="1000"
-        src="/videos/ScreenUi-tall_1.mp4"
+        src="/videos/ScreenUi-tall_2.mp4"
         style="display: none" 
     ></video>
     <video 
@@ -93,7 +93,7 @@
         autoplay
         width="500"
         height="1000"
-        src="/videos/about.mp4"
+        src="/videos/about-2.mp4"
         style="display: none" 
     ></video>
 </body>
